# heekscnc

./: CMakeLists.txt  area_funcs.py  kurve_funcs.py
nc/: iso.py  nc.py
postprocessor/: __init__.py  offsets.py  trochoidal.py  zigzag.py
src/: AttachOp.cpp  AttachOp.h  BOM.cpp  BOM.h  CMakeLists.txt  CNCConfig.h  CNCPoint.cpp  CNCPoint.h  CTool.cpp  CTool.h  CToolDlg.cpp  Chamfer.cpp  Chamfer.h  Contour.cpp  Contour.h  CounterBore.cpp  CounterBore.h  CuttingRate.cpp  CuttingRate.h  DepthOp.cpp  DepthOp.h  DepthOpDlg.cpp  Drilling.cpp  Drilling.h  DrillingDlg.cpp  DropCutter.h  Excellon.cpp  Excellon.h  Fixture.cpp  Fixture.h  Fixtures.cpp  HeeksCNC.cpp  HeeksCNC.h  HeeksCNCInterface.cpp  HeeksCNCInterface.h  HeeksCNCTypes.h  Inlay.cpp  Inlay.h  Interface.cpp  Interface.h  (+79 more)
